# waitaha

./: .gitignore  .gitmodules  ADDING_A_DEVICE.md  Makefile  README.md
waitaha-br2-external/: Config.in  external.desc  external.mk
waitaha-br2-external/board/davinci/: configs
waitaha-br2-external/board/sweet/: configs
waitaha-br2-external/board/waitaha/: post-build.sh  post-image.sh
waitaha-br2-external/configs/: davinci_defconfig  debug_defconfig  sm7150_defconfig  sweet_defconfig  waitaha_defconfig
waitaha-br2-external/package/deviceinfo/: Config.in  deviceinfo.mk
waitaha-br2-external/package/drm-info/: 0001-meson.build-Don-t-contact-sysroot-twice-when-looking.patch  Config.in  drm-info.mk
waitaha-br2-external/package/firmware-davinci/: Config.in  firmware-davinci.mk  ipa_fws.mbn  modem-up.initd  wlanmdsp.mbn
waitaha-br2-external/package/firmware-sweet/: Config.in  a615_zap.mbn  firmware-sweet.mk  ipa_fws.mbn  modem-up.initd  wlanmdsp.mbn
waitaha-br2-external/package/modules-autoload/: Config.in  S02modules  modules-autoload.mk
waitaha-br2-external/package/modules-davinci/: Config.in  modules-davinci.mk  modules.conf
waitaha-br2-external/package/qrtr/: Config.in  qrtr.mk
waitaha-br2-external/package/rmtfs/: Config.in  rmtfs.initd  rmtfs.mk
waitaha-br2-external/package/tqftpserv/: Config.in  tqftpserv.initd  tqftpserv.mk
waitaha-br2-external/package/waitaha-ui/: Config.in  (+2 more)
waitaha-ui/: Cargo.toml  build.rs
waitaha-ui/.cargo/: config.toml
waitaha-ui/src/: battery.rs  deviceinfo.rs  main.rs
waitaha-ui/ui/: hello.slint  main.slint
(+5 files in other folders)
